Finishing compilation tasks

--- a/dev/index.html
+++ b/dev/index.html
@@ -2,10 +2,15 @@
 layout      : default
 project     : dynamic-site-starter
 path        : /home
+slug        : home
 title       : Home
 description : This project aims to streamline starting an application in Jekyll
 keywords    : jekyll, html, static, dinamic, site, starter
 share       : /share.jpg
 ---
 
-Home page
+            <div class="home">
+                <h1 class="logo">
+                    <img src="assets/images/jekyll.jpg" alt="Jekyll" class="jekyll">
+                </h1>
+            </div>
