--- a/dev/index.html
+++ b/dev/index.html
@@ -1,7 +1,7 @@
 ---
 layout      : default
 project     : dynamic-site-starter
-path        : /home
+path        : /
 slug        : home
 title       : Home
 description : This project aims to streamline starting an application in Jekyll
