Updating files structure and dependencies

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,12 +1,13 @@
 ---
 layout      : default
-project     : dynamic-site-starter
+project     : jekyll-starter
 path        : /
 slug        : home
+dependencie : home
 title       : Home
 description : This project aims to streamline starting an application in Jekyll
 keywords    : jekyll, html, static, dinamic, site, starter
-share       : /share.jpg
+share       : ./share.jpg
 ---
 
             <div class="home">
